<?xml version="1.0"?>
<package>
  <name>nautonomous_tf</name>
  <version>0.0.1</version>
  <description>The nautonomous_tf package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">zeeuwe01</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
